8307955: Prefer to PTRACE_GETREGSET instead of PTRACE_GETREGS in method 'ps_proc.c::process_get_lwp_regs'

Reviewed-by: fyang, gli
Backport-of: 2f1c65486b1e584f9c4a2eb7af2414d032a02748